second assigment for week 1

--- a/week-1/C3_W1_Lab_1_transfer_learning_cats_dogs.ipynb
+++ b/week-1/C3_W1_Lab_1_transfer_learning_cats_dogs.ipynb
@@ -223,6 +223,39 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "all_images = os.listdir(DOG_SOURCE_DIR)\n",
+        "print(all_images[:10])"
+      ],
+      "metadata": {
+        "id": "ddNxX6if17bV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "from PIL import Image\n",
+        "\n",
+        "img = Image.open(\"/tmp/PetImages/Dog/1684.jpg\")\n",
+        "plt.imshow(img)\n",
+        "plt.axis('off')\n",
+        "plt.show()\n",
+        "\n",
+        "print(img.format)\n",
+        "print(img.size)\n",
+        "print(img.mode)"
+      ],
+      "metadata": {
+        "id": "UE6YsObU1Fsq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "pNz89__rJVQR"
@@ -249,7 +282,7 @@
       "source": [
         "\n",
         "TRAINING_DIR = \"/tmp/cats-v-dogs/training/\"\n",
-        "# Experiment with your own parameters to reach 99.9% validation accuracy or better\n",
+        "\n",
         "train_datagen = ImageDataGenerator(\n",
         "    rescale=1./255,\n",
         "    rotation_range=40,\n",
