--- a/week-2/C3_W2_Lab_1_Simple_Object_Detection.ipynb
+++ b/week-2/C3_W2_Lab_1_Simple_Object_Detection.ipynb
@@ -388,9 +388,61 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "def run_detector(detector, path):\n",
+        "    '''\n",
+        "    Runs inference on a local file using an object detection model.\n",
+        "\n",
+        "    Args:\n",
+        "        detector (model) -- an object detection model loaded from TF Hub\n",
+        "        path (string) -- path to an image saved locally\n",
+        "    '''\n",
+        "\n",
+        "    # load an image tensor from a local file path\n",
+        "    img = load_img(path)\n",
+        "\n",
+        "    # add a batch dimension in front of the tensor\n",
+        "    converted_img  = tf.image.convert_image_dtype(img, tf.float32)[tf.newaxis, ...]\n",
+        "\n",
+        "    # run inference using the model\n",
+        "    result = detector(converted_img)\n",
+        "\n",
+        "    # save the results in a dictionary\n",
+        "    result = {key:value.numpy() for key,value in result.items()}\n",
+        "\n",
+        "    # print results\n",
+        "    print(\"Found %d objects.\" % len(result[\"detection_scores\"]))\n",
+        "\n",
+        "    print(result[\"detection_scores\"])\n",
+        "    print(result[\"detection_class_entities\"])\n",
+        "    print(result[\"detection_boxes\"])\n",
+        "\n",
+        "    # Return the result dictionary\n",
+        "    return result # This line is added to return the result"
+      ],
+      "metadata": {
+        "id": "WeIE7F2BT7lE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = run_detector(detector, downloaded_image_path)  # Get results first\n",
+        "display_image_with_boxes(downloaded_image_path, result[\"detection_boxes\"], result[\"detection_scores\"], result[\"detection_class_entities\"])"
+      ],
+      "metadata": {
+        "id": "qxPsSHZSUTSs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "qymR0UKZSiej"
+        "id": "AbR48baWUWL0"
       },
       "execution_count": null,
       "outputs": []
