--- a/week-3/C3_W3_Lab_2_OxfordPets_UNet.ipynb
+++ b/week-3/C3_W3_Lab_2_OxfordPets_UNet.ipynb
@@ -400,7 +400,7 @@
       "source": [
         "# Encoder Utilities\n",
         "\n",
-        "def conv2d_block(input_tensor, n_filters, kernel_size = 3):\n",
+        "def conv2d_block(input_tensor, n_filters, kernel_size=3):\n",
         "  '''\n",
         "  Adds 2 convolutional layers with the parameters passed to it\n",
         "\n",
@@ -415,8 +415,10 @@
         "  # first layer\n",
         "  x = input_tensor\n",
         "  for i in range(2):\n",
-        "    x = tf.keras.layers.Conv2D(filters = n_filters, kernel_size = (kernel_size, kernel_size),\\\n",
-        "            kernel_initializer = 'he_normal', padding = 'same')(x)\n",
+        "    x = tf.keras.layers.Conv2D(\n",
+        "        filters=n_filters,\n",
+        "        kernel_size=(kernel_size, kernel_size),\n",
+        "        kernel_initializer='he_normal', padding='same')(x)\n",
         "    x = tf.keras.layers.Activation('relu')(x)\n",
         "\n",
         "  return x\n",
@@ -487,7 +489,6 @@
         "  '''\n",
         "  This function defines the bottleneck convolutions to extract more features before the upsampling layers.\n",
         "  '''\n",
-        "\n",
         "  bottle_neck = conv2d_block(inputs, n_filters=1024)\n",
         "\n",
         "  return bottle_neck"
@@ -531,7 +532,7 @@
         "  Returns:\n",
         "    c (tensor) -- output features of the decoder block\n",
         "  '''\n",
-        "  u = tf.keras.layers.Conv2DTranspose(n_filters, kernel_size, strides = strides, padding = 'same')(inputs)\n",
+        "  u = tf.keras.layers.Conv2DTranspose(n_filters, kernel_size, strides = strides, padding='same')(inputs)\n",
         "  c = tf.keras.layers.concatenate([u, conv_output])\n",
         "  c = tf.keras.layers.Dropout(dropout)(c)\n",
         "  c = conv2d_block(c, n_filters, kernel_size=3)\n",
@@ -591,7 +592,7 @@
         "  '''\n",
         "\n",
         "  # specify the input shape\n",
-        "  inputs = tf.keras.layers.Input(shape=(128, 128,3,))\n",
+        "  inputs = tf.keras.layers.Input(shape=(128, 128, 3,))\n",
         "\n",
         "  # feed the inputs to the encoder\n",
         "  encoder_output, convs = encoder(inputs)\n",
@@ -635,8 +636,11 @@
       "outputs": [],
       "source": [
         "# configure the optimizer, loss and metrics for training\n",
-        "model.compile(optimizer=tf.keras.optimizers.Adam(), loss='sparse_categorical_crossentropy',\n",
-        "              metrics=['accuracy'])"
+        "model.compile(\n",
+        "    optimizer=tf.keras.optimizers.Adam(),\n",
+        "    loss='sparse_categorical_crossentropy',\n",
+        "    metrics=['accuracy']\n",
+        ")"
       ]
     },
     {
@@ -655,11 +659,14 @@
         "STEPS_PER_EPOCH = TRAIN_LENGTH // BATCH_SIZE\n",
         "VALIDATION_STEPS = info.splits['test'].num_examples//BATCH_SIZE//VAL_SUBSPLITS\n",
         "\n",
-        "# this will take around 20 minutes to run\n",
-        "model_history = model.fit(train_dataset, epochs=EPOCHS,\n",
-        "                          steps_per_epoch=STEPS_PER_EPOCH,\n",
-        "                          validation_steps=VALIDATION_STEPS,\n",
-        "                          validation_data=test_dataset)"
+        "# train the model\n",
+        "model_history = model.fit(\n",
+        "    train_dataset,\n",
+        "    epochs=EPOCHS,\n",
+        "    steps_per_epoch=STEPS_PER_EPOCH,\n",
+        "    validation_steps=VALIDATION_STEPS,\n",
+        "    validation_data=test_dataset\n",
+        ")\n"
       ]
     },
     {
